# VTT

./: .qmake.stash  ANDROID_COMPATIBILITY_REPORT.md  ANDROID_IMPLEMENTATION_SUMMARY.md  ANDROID_VOICE_IMPLEMENTATION_COMPLETE.md  CMakeLists.txt  README.md  android_tts_setup.md  build.bat  build_clean.txt  build_errors.txt  build_output.txt  chkdata2.csv  crash_debug.txt  csvdemo.html  main.cpp  qml_debug.txt  run.bat  sample_data.csv  update_qt6.bat
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  VoiceAILLM_qml.cmake  VoiceAILLM_res.cmake
.qt/deploy_qml_imports/: VoiceAILLM.cmake
.qt/qml_imports/: VoiceAILLM_build.cmake  VoiceAILLM_build.rsp  VoiceAILLM_conf.rsp
.qt/rcc/: VoiceAILLM_raw_qml_0.qrc  qmake_VoiceAILLM.qrc  qrc_VoiceAILLM_raw_qml_0.cpp  qrc_qmake_VoiceAILLM.cpp
.rcc/qmlcache/: VoiceAILLM_qml_loader_file_list.rsp  VoiceAILLM_qmlcache_loader.cpp  all_aotstats.aotstatslist  module_VoiceAILLM.aotstatslist
.rcc/qmlcache/VoiceAILLM_qml/: ChatWindow_qml.cpp  ChatWindow_qml.cpp.aotstats  Main_qml.cpp  Main_qml.cpp.aotstats  MessageDelegate_qml.cpp  MessageDelegate_qml.cpp.aotstats  OAuth2LoginDialog_qml.cpp  OAuth2LoginDialog_qml.cpp.aotstats  PromptManagerDialog_qml.cpp  PromptManagerDialog_qml.cpp.aotstats  SettingsDialog_qml.cpp  SettingsDialog_qml.cpp.aotstats  VoiceButton_qml.cpp  VoiceButton_qml.cpp.aotstats
.rcc/qmllint/: VoiceAILLM.rsp  VoiceAILLM_json.rsp  VoiceAILLM_module.rsp
android/: AndroidManifest.xml
android/res/drawable/: icon.xml
android/src/com/voiceaillm/app/: KeystoreHelper.java  PermissionHelper.java  SpeechRecognitionHelper.java
data/: voiceaillm.db
include/: AndroidKeystoreManager.h  AndroidPermissionManager.h  AudioBuffer.h  CSVViewer.h  ChatManager.h  DatabaseManager.h  DeviceDiscoveryManager.h  GraphicsOptimizer.h  LLMConnectionManager.h  LoggingManager.h  NextGenCSVViewer.h  OAuth2Manager.h  PDFGenerator.h  PDFManager.h  PDFViewer.h  PlatformDetection.h  PromptManager.h  QMLPDFGenerator.h  QPing.h  QRCodeGenerator.h  SecureStorage.h  SecureStorageManager.h  SvgHandler.h  TTSManager.h  VoiceRecognitionManager.h  WebEnginePDFGenerator.h
ios/: Info.plist
meta_types/: VoiceAILLM_json_file_list.txt  VoiceAILLM_json_file_list.txt.timestamp  qt6voiceaillm_metatypes.json.gen
qml/: CSVDialog.qml  CSVViewer.qml  CSVViewerComponent.qml  ChatWindow.qml  CommTestDialog.qml  DataSeriesControl.qml  Main.qml  MessageDelegate.qml  NextGenCSVViewer.qml  NextGenCSVViewerComponent.qml  NextGenInteractiveChart.qml  OAuth2LoginDialog.qml  PDFDialog.qml  PDFViewer.qml  PermissionDialog.qml  PlatformTest.qml  QmlViewerDialog.qml  RobotArm3DDialog.qml  RobotArm3DLoader.qml  SettingsDialog.qml  SvgHandler.qml  SvgViewerDialog.qml  TTSComponent.qml  VoiceAILLM_qml.qrc  VoiceButton.qml  WebBrowser.qml  WebEnginePDFRenderer.qml
qml/RobotArm3D/: LabeledSlider3D.qml  RobotArmScene.qml  RoboticArm3D.qml  Toggle3D.qml  qmldir
qml/pdf_templates/: Lifedata.qml
qmltypes/: VoiceAILLM_foreign_types.txt
resources/templates/: Lifedata.ui.qml
src/: AndroidKeystoreManager.cpp  AndroidPermissionManager.cpp  AudioBuffer.cpp  CSVViewer.cpp  ChatManager.cpp  DatabaseManager.cpp  DeviceDiscoveryManager.cpp  GraphicsOptimizer.cpp  LLMConnectionManager.cpp  LoggingManager.cpp  NextGenCSVViewer.cpp  OAuth2Manager.cpp  PDFGenerator.cpp  PDFManager.cpp  PDFViewer.cpp  PlatformSpeechRecognition.cpp  PromptManager.cpp  QMLPDFGenerator.cpp  QPing.cpp  QRCodeGenerator.cpp  SecureStorage.cpp  SecureStorageManager.cpp  SvgHandler.cpp  TTSManager.cpp  VoiceRecognitionManager.cpp  WebEnginePDFGenerator.cpp
